Project 7 link update

--- a/personal-portfolio/Personal Website/index.html
+++ b/personal-portfolio/Personal Website/index.html
@@ -898,7 +898,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.datacamp.com/datalab/w/393cfb6d-fdd1-4f13-bb88-3025be7d859e/report">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
