--- a/personal-portfolio/Personal Website/index.html
+++ b/personal-portfolio/Personal Website/index.html
@@ -300,7 +300,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -542,10 +542,11 @@
               <span>Experis IT - Verizon, Basking Ridge, NJ</span>
 
               <ul class="timeline-text">
-  <li>◉ Data Quality Management: Developing data validation rules and monitoring mechanisms in SAP MDG using DQM, reducing data errors by 25% and ensuring compliance with industry standards.</li>
+  <li>◉ Data Quality Management: Maintain and enhance data validation rules and monitoring mechanisms in SAP Master Data Governance (MDG) using Data Quality Management (DQM), collaborating with business owners to identify and address data quality issues. This proactive approach reduces data errors by 25% and ensures compliance with industry standards.</li>
   <li>◉ Master Data Management: Manage the lifecycle of wireless material master data using SAP MM module, collaborating with supply chain, engineering, and finance teams.</li>
   <li>◉ Cross-Functional Collaboration: Lead cross-functional teams to identify and troubleshoot issues in ECC/S4 HANA and MDG systems, improving system performance by 20%.</li>
   <li>◉ Process Improvement: Reviewed and suggested modifications to current MDG material creation templates/processes to improve material governance.</li>
+  <li>◉ Created and maintained Bills of Materials (BOMs) for wireless product kits in SAP material master, ensuring accuracy and completeness of component data.</li>
   <li>◉ SQVI Report Creation: Utilizing SAP Query Viewer (SQVI ~ SQL Queries) to design and generate ad-hoc reports, providing quick insights and facilitating data-driven decision-making.</li>
 </ul>
 
@@ -554,11 +555,9 @@
   <span>Jul 2023 — Dec 2023</span>
   <span>CBL Solutions - Clorox Company, Princeton, NJ</span>
   <ul class="timeline-text">
-    <li>◉ Analyzed master data for missing critical fields, collaborating with business units to update and standardize data entries, resulting in a 15% improvement in data accuracy.</li>
-    <li>◉ Developed and implemented data validation rules in the ERP system, reducing data errors by 20% and ensuring compliance with corporate policies.</li>
+    <li>◉ Mainatined and Optimized Tableau dashboards to ensure they meet evolving business needs and improve data visualization effectiveness, resulting in a 20% increase in user engagement.</li>
     <li>◉ Conducted periodic reviews of key vendor’s scorecards, identifying roadblocks and recommending process improvements that led to a 10% increase in on-time payments.</li>
     <li>◉ Precision SQL Query Crafting: Developed and fine-tuned SQL queries, Crafted SQL queries to meet precise business needs, ensuring project adherence and reducing query runtime by 20%.</li>
-    <li>◉ Assisted in acquisition/divesture activities, ensuring seamless data integration and transition.</li>
     <li>◉ Recommended changes to methods and procedures, improving operational accuracy and streamlining processes by at least 25%.</li>
   </ul>
   
@@ -732,13 +731,13 @@
         </header>
 
         <section class="projects">
-
+          
           <ul class="filter-list">
-
+            <!--
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
             </li>
-
+            
             <li class="filter-item">
               <button data-filter-btn>Telecom/Network Operations</button>
             </li>
@@ -750,7 +749,7 @@
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
             </li>
-
+            -->
           </ul>
 
           <div class="filter-select-box">
@@ -1171,9 +1170,9 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
-
+          <form action="https://api.web3forms.com/submit" method="POST" class="form" data-form>
             <div class="input-wrapper">
+              <input type="hidden" name="access_key" value="095bb9f4-00d7-4f1e-a166-0b3788a94f28">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
 
               <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
