--- a/index.html
+++ b/index.html
@@ -1170,9 +1170,9 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
-
+          <form action="https://api.web3forms.com/submit" method="POST" class="form" data-form>
             <div class="input-wrapper">
+              <input type="hidden" name="access_key" value="095bb9f4-00d7-4f1e-a166-0b3788a94f28">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
 
               <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
