--- a/index.html
+++ b/index.html
@@ -603,9 +603,8 @@
   <ul class="timeline-text">
     <li>◉ Provided critical backend support for Amazon UK sellers, resolving complex inventory and order management issues to ensure smooth operations.</li>
     <li>◉ Received numerous awards for consistently delivering top-tier performance in master data management and maintaining high data quality standards.</li>
-    <li>◉ Collaborated with cross-functional teams to ensure seamless integration of SAP IM, WM, and EWM modules, aligning warehouse operations with broader supply chain goals.</li>
     <li>◉ Leveraged data analytics to identify inefficiencies in inventory and warehouse management, leading to targeted improvements and automation of key processes.</li>
-    <li>◉ Coached over 40 associates on best practices in SAP IM, WM, and EWM, fostering a culture of continuous improvement and operational excellence.</li>
+    <li>◉ Coached over 40 associates on best practices, fostering a culture of continuous improvement and operational excellence.</li>
     <li>◉ Utilized SQL and Excel to analyze inventory data, identify trends, and generate reports that informed strategic decisions for inventory optimization.</li>
   </ul>
 </li>
