Updated Link for Telco Customer Churn Analysis Dashboard

--- a/personal-portfolio/Personal Website/index.html
+++ b/personal-portfolio/Personal Website/index.html
@@ -799,9 +799,9 @@
                   <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">R Programming</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Predictive Analytics</p>
 
               </a>
             </li>
@@ -825,7 +825,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Telecom/Network Operations">
-              <a href="#">
+              <a href="https://github.com/AbhishekSuragani/DataCamp-Projects/tree/052ffe626e9ed1081173c20ec754c9260e30e10d/Excel/Telecom%20Customer%20Churn%20Analysis%20-%20Excel%20Dashboard">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -835,9 +835,9 @@
                   <img src="./assets/images/project-3.png" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Excel</h3>
 
-                <p class="project-category">Telecom/Network Operations</p>
+                <p class="project-category">BI Excel Dashboard</p>
 
               </a>
             </li>
