--- a/personal-portfolio/Personal Website/index.html
+++ b/personal-portfolio/Personal Website/index.html
@@ -756,7 +756,7 @@
 
             <button class="filter-select" data-select>
 
-              <div class="select-value" data-selecct-value>Select category</div>
+              <div class="select-value" data-select-value>Select category</div>
 
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
@@ -789,7 +789,7 @@
           <ul class="project-list" >
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://www.datacamp.com/datalab/w/3a238ebb-29ec-4dbb-b4f3-083f1cc6b6df/edit" >
+              <a href="https://www.datacamp.com/datalab/w/3a238ebb-29ec-4dbb-b4f3-083f1cc6b6df/edit" class="social-link" target="_blank" >
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -807,7 +807,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.datacamp.com/datalab/w/8149bf5d-d76d-4317-9b29-dd270ebaa419/edit" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -817,15 +817,15 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">SQL</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Data Analysis</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Telecom/Network Operations">
-              <a href="https://github.com/AbhishekSuragani/DataCamp-Projects/tree/052ffe626e9ed1081173c20ec754c9260e30e10d/Excel/Telecom%20Customer%20Churn%20Analysis%20-%20Excel%20Dashboard">
+              <a href="https://github.com/AbhishekSuragani/DataCamp-Projects/tree/052ffe626e9ed1081173c20ec754c9260e30e10d/Excel/Telecom%20Customer%20Churn%20Analysis%20-%20Excel%20Dashboard" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -837,13 +837,13 @@
 
                 <h3 class="project-title">Excel</h3>
 
-                <p class="project-category">BI Excel Dashboard</p>
+                <p class="project-category">Business Intelligence Dashboard</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="#" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -853,15 +853,15 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">R Programming</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Predictive Analytics</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Telecom/Network Operations">
-              <a href="#">
+              <a href="https://public.tableau.com/app/profile/abhishek.suragani/viz/HRanalyticsinTableau/HRDashboard" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -871,15 +871,15 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Tableau</h3>
 
-                <p class="project-category">Telecom/Network Operations</p>
+                <p class="project-category">Business Intelligence Dashboard</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Telecom/Network Operations">
-              <a href="#">
+              <a href="https://public.tableau.com/app/profile/abhishek.suragani/viz/ABCSocialMediaDashboard_ExtractedVersionDatatill31July2022/KaptivateSocialMediaDashboard" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -889,15 +889,15 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Tableau</h3>
 
-                <p class="project-category">Telecom/Network Operations</p>
+                <p class="project-category">Social Media Dashboard</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://www.datacamp.com/datalab/w/393cfb6d-fdd1-4f13-bb88-3025be7d859e/report">
+              <a href="https://www.datacamp.com/datalab/w/393cfb6d-fdd1-4f13-bb88-3025be7d859e/report" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -907,15 +907,15 @@
                   <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Data Analysis</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Excel</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://public.tableau.com/app/profile/abhishek.suragani/viz/AmazonSalesAnalysisDashboard_17264187139640/Dashboard1" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -925,15 +925,15 @@
                   <img src="./assets/images/project-8.png" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Tableau</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Business Intelligence</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.datacamp.com/datalab/w/67a47ee3-14ff-4aed-81fa-658e34746588/edit" class="social-link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -943,9 +943,9 @@
                   <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Python</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Predictive Analytics</p>
 
               </a>
             </li>
