--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
               <span>Experis IT - Verizon, Basking Ridge, NJ</span>
 
               <ul class="timeline-text">
-  <li>◉ Data Quality Management: Maintain and enhance data validation rules and monitoring mechanisms in SAP Master Data Governance (MDG) using Data Quality Management (DQM), collaborating with business owners to identify and address data quality issues. This proactive approach reduces data errors by 25% and ensures compliance with industry standards.</li>
+  <li>◉ Data Quality Management: Maintain and enhance data validation rules and monitoring mechanisms in SAP Master Data Governance (MDG) using Data Quality Management (DQM), collaborating with business owners to identify and address data quality issues. This proactive approach reduces data errors by 20% and ensures compliance with industry standards.</li>
   <li>◉ Master Data Management: Manage the lifecycle of wireless material master data using SAP MM module, collaborating with supply chain, engineering, and finance teams.</li>
   <li>◉ Cross-Functional Collaboration: Lead cross-functional teams to identify and troubleshoot issues in ECC/S4 HANA and MDG systems, improving system performance by 20%.</li>
   <li>◉ Process Improvement: Reviewed and suggested modifications to current MDG material creation templates/processes to improve material governance.</li>
@@ -605,13 +605,13 @@
     <li>◉ Received numerous awards for consistently delivering top-tier performance in master data management and maintaining high data quality standards.</li>
     <li>◉ Collaborated with cross-functional teams to ensure seamless integration of SAP IM, WM, and EWM modules, aligning warehouse operations with broader supply chain goals.</li>
     <li>◉ Leveraged data analytics to identify inefficiencies in inventory and warehouse management, leading to targeted improvements and automation of key processes.</li>
-    <li>◉ Coached over 40 associates on best practices in SAP IM, WM, and EWM, fostering a culture of continuous improvement and operational excellence.</li>
+    <li>◉ Coached over 40 new hires on best practices in business process, fostering a culture of continuous improvement and operational excellence.</li>
     <li>◉ Utilized SQL and Excel to analyze inventory data, identify trends, and generate reports that informed strategic decisions for inventory optimization.</li>
   </ul>
 </li>
 
 <li class="timeline-item">
-  <h4 class="h4 timeline-item-title">Strategic Analysis Intern</h4>
+  <h4 class="h4 timeline-item-title">Strategy Analysis Intern</h4>
   <span>Mar 2018 — Sep 2018</span>
   <span>Dunzo, Hyderabad, India</span>
   <ul class="timeline-text">
