--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
   <span>CBL Solutions - Clorox Company, Princeton, NJ</span>
   <ul class="timeline-text">
     <li>◉ Mainatined and Optimized Tableau dashboards to ensure they meet evolving business needs and improve data visualization effectiveness, resulting in a 20% increase in user engagement.</li>
-    <li>◉ Conducted periodic reviews of key vendor’s scorecards, identifying roadblocks and recommending process improvements that led to a 10% increase in on-time payments.</li>
+    <li>◉ Conducted periodic reviews of key vendors based on revenue, identifying roadblocks and recommending process improvements that led to a 10% increase in on-time payments.</li>
     <li>◉ Precision SQL Query Crafting: Developed and fine-tuned SQL queries, Crafted SQL queries to meet precise business needs, ensuring project adherence and reducing query runtime by 20%.</li>
     <li>◉ Recommended changes to methods and procedures, improving operational accuracy and streamlining processes by at least 25%.</li>
   </ul>
@@ -603,7 +603,8 @@
   <ul class="timeline-text">
     <li>◉ Provided critical backend support for Amazon UK sellers, resolving complex inventory and order management issues to ensure smooth operations.</li>
     <li>◉ Received numerous awards for consistently delivering top-tier performance in master data management and maintaining high data quality standards.</li>
-    <li>◉ Collaborated with cross-functional teams to ensure seamless integration of SAP IM, WM, and EWM modules, aligning warehouse operations with broader supply chain goals.</li>
+    <li>◉ Collaborated with cross-functional teams to ensure seamless integration of technology, aligning warehouse operations with broader supply chain goals.</li>
+    <li>◉ Contributed to the successful launch of Amazon Australia by collaborating with cross-functional teams to develop and implement strategic initiatives, enhancing market entry efficiency and customer engagement.</li>
     <li>◉ Leveraged data analytics to identify inefficiencies in inventory and warehouse management, leading to targeted improvements and automation of key processes.</li>
     <li>◉ Coached over 40 new hires on best practices in business process, fostering a culture of continuous improvement and operational excellence.</li>
     <li>◉ Utilized SQL and Excel to analyze inventory data, identify trends, and generate reports that informed strategic decisions for inventory optimization.</li>
