--- a/personal-portfolio/Personal Website/index.html
+++ b/personal-portfolio/Personal Website/index.html
@@ -207,7 +207,7 @@
 
         <section class="about-text">
           <p>
-            I'm a Data Professional from New Jersey, with over 5 years of experience in the e-commerce, Telecom and analytics consulting industries. 
+            I'm a Data Professional from New Jersey, with over Six years of experience in the e-commerce, Telecom and analytics consulting industries. 
             My expertise lies in Descriptive, Diagnostic and Predictive Analytics, where I excel at analyzing complex datasets to uncover trends, patterns, and root causes of business issues.
         
           </p>
